# XAIguide

./: 01_load_and_normalize.py  02_reddit_fetch.py  LICENCE  README.md  requirements.txt
data/input/: README.md
mcp-reddit/: .env.example  README.md  mcp.json  mcp.py  pyproject.toml  requirements.txt
src/: 01_reddit_fetch.py  02_reddit_fetch.py  03_extraction_analyse.py  04_imputation.py  05_metrics_export.py  config.py  pipeline.py
test/: test_pipeline
