[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reddit-mcp-server"
version = "1.0.0"
description = "Serveur MCP pour l'API Reddit"
authors = [{name = "Assistant", email = "assistant@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=1.2.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0"
]

[project.scripts]
reddit-mcp-server = "reddit_server:main"